@@ -5,6 +5,7 @@ Date: ????
     - Added function `create_icon_variations`
   Changes:
     - Removed function `ore_icon_variations`
+    - Adjusted function `construct_icon` and `construct_technology_icon` to allow direct specification of base layer for multi-layer icons
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.5
 Date: 2021-03-22
